--- a/src/app/componentes/switch-boton/switch-boton.component.html
+++ b/src/app/componentes/switch-boton/switch-boton.component.html
@@ -1,7 +1,7 @@
 <label class="switch">
     <input  [(ngModel)]="value"  [ngClass]="clase_input" [id]="id"   type="checkbox" id="togBtn">
     <div class="slider "><!--ADDED HTML -->
-        <span class="on"><b>Sí</b></span>
+        <span class="on"><b>Si</b></span>
         <span class="off"><b>No</b></span><!--END-->
     </div>
 </label>
