--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,86 @@
     --col-verdeObscuro: rgba(0, 102, 52,1);
     --col-verdeClaro: rgba(3, 142, 3,1) ;
     --col-bordes: rgba(199,199,196,1);
-    --tex-texto: Verdana, Arial, Helvetica, sans-serif;
+    --tex-texto:  Verdana, Arial, Helvetica, sans-serif; /*monospace,*/
     --col-texto: rgba(10,10,10,1);
     --texto: 11px  ;
+    --text-xl: 0.92em;
+    --padding-xl-alto : 0.3rem;
+    --padding-xl-ancho : 0.55rem;
+    --padding-sm : 10px;
   }
+
+  /*daniela*/
+  body{
+    font-family: var(--tex-texto); 
+    margin: 0;
+    margin-bottom: 40px; /*ver*/
+    font-size: 1em ;
+  }
+  .form-control{   
+    font-size: var(--text-xl);
+  }
+  html {
+    min-height: 100%;
+    position: relative;
+  }
+ 
+  h2 {
+    height: 25px;
+    color: var(--col-verdeClaro);
+    font-family: var(--tex-texto);
+    padding: .75rem;
+    /*border-bottom: 1px solid var(--col-bordes);*/
+    font-size: 1em;
+  }
+  hr{
+    border-color:  1px solid #dee2e6;
+    margin-bottom: 0.75rem !important;
+  }
+  label.tituloCampo{
+    text-align: left !important;    
+    justify-content: left !important;
+    display: inline-flex;
+  }
+  .noPadding{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+  .btn-elevado{
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  }
+  .btn-elevado:focus:not(:active) {
+    box-shadow: 0 0 8px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.36);
+  }
+  .btn-elevado:active {
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+}
+.formulario{
+  max-width: 1560px;
+}
+@media (min-width: 1200px) {
+  body,.btn{font-size: var(--text-xl) !important;}
+  .form-control{padding: var(--padding-xl-alto) var(--padding-xl-ancho) !important;font-size: var(--text-xl) !important;}
+  .form-group{font-size: var(--text-xl) !important;
+    margin-bottom:var(--padding-xl-ancho) !important;
+  }  
+}
+@media (max-width: 576px) {
+  label.tituloCampo{margin-bottom: 0px;}
+  [class*="col-"]{
+    padding-left:10px !important;
+    padding-right: 10px !important;
+  } 
+}
+@media (max-width: 768px) {
+  [class*="col-"]{
+    padding-left:5px !important;
+    padding-right: 5px !important;
+  }
+  .form-control{padding: var(--padding-xl-alto) var(--padding-xl-ancho) !important;}
+  .form-group{margin-bottom: 4px !important;}
+}
+  /********/
 
   .requerido
   {
@@ -17,20 +93,10 @@
       margin-top:5px;
       margin-left:5px;
       margin-right:5px;
-      font-size: 14px;
+     /** font-size: 14px;*/
   }
      
-     body
-     {
-       font-family: var(--tex-texto); 
-       margin: 0;
-       margin-bottom: 40px;
-       }
- 
-       html {
-        min-height: 100%;
-        position: relative;
-      }
+     
       .btn_enviar
       {
         margin-top: 2rem;
@@ -71,10 +137,6 @@
         animation-name: fadeIn;
       }
 
-@media  screen and (max-width: 425px)   {
-        
-
-}
 @media  screen and (max-width:850px) and (min-width:450px) {
   switch-boton
   {
@@ -84,15 +146,4 @@
 
   
 
-}
-
-
-
-@media  screen and (max-width: 1140px)  and (min-width: 850px)  {
-
-}
-
-
-
-@media  screen and (max-width: 1552px) and (min-width: 1140px) {
 }
